--- a/modules/incident/src/main/resources/META-INF/resources/styles/incident/nics.css
+++ b/modules/incident/src/main/resources/META-INF/resources/styles/incident/nics.css
@@ -28,112 +28,79 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 .nontb_style {
-    display: inline-block;
-    outline: 0;
-    cursor: pointer;
-    white-space: nowrap;
-    text-decoration: none;
-    vertical-align: top;
-    overflow: hidden;
-    // buttons are position:relative because they may contain an absolutely positioned
-    // pseudo element for imitating box-shadow in IE8 when used in a segmented button
-    // see extjs-button-ui
-    position: relative;
-    .nontb_style > .x-frame {
-        height: 100%;
-        width: 100%;
-    }
-}
+  display: inline-block;
+  outline: 0;
+  cursor: pointer;
+  white-space: nowrap;
+  text-decoration: none;
+  vertical-align: top;
+  overflow: hidden;
+  position: relative; }
+  .nontb_style .nontb_style > .x-frame {
+    height: 100%;
+    width: 100%; }
 
 .nontb_style-wrap {
-    display: table;
-    height: 100%;
-    width: 100%;
-}
+  display: table;
+  height: 100%;
+  width: 100%; }
 
 .nontb_style-button {
-    vertical-align: middle;
-    display: table-cell;
-    white-space: nowrap;
-    line-height: 0;
-}
+  vertical-align: middle;
+  display: table-cell;
+  white-space: nowrap;
+  line-height: 0; }
 
 .nontb_style-inner {
-    display: inline-block;
-    vertical-align: middle;
-    overflow: hidden;
-    text-overflow: ellipsis;
-
-    .nontb_style-icon.nontb_style-no-text > & {
-        display: none;
-    }
-}
+  display: inline-block;
+  vertical-align: middle;
+  overflow: hidden;
+  text-overflow: ellipsis; }
+  .nontb_style-icon.nontb_style-no-text > .nontb_style-inner {
+    display: none; }
 
 .nontb_style-icon-el {
-    display: none;
-    vertical-align: middle;
-    background-position: center center;
-    background-repeat: no-repeat;
-
-    .nontb_style-icon > & {
-        display: inline-block;
-    }
-
-    .nontb_style-icon-top > &,
-    .nontb_style-icon-bottom > & {
-        display: block;
-    }
-}
+  display: none;
+  vertical-align: middle;
+  background-position: center center;
+  background-repeat: no-repeat; }
+  .nontb_style-icon > .nontb_style-icon-el {
+    display: inline-block; }
+  .nontb_style-icon-top > .nontb_style-icon-el, .nontb_style-icon-bottom > .nontb_style-icon-el {
+    display: block; }
 
 .nontb_style-button-center {
-    text-align: center;
-}
+  text-align: center; }
 
 .nontb_style-button-left {
-    text-align: left;
-}
+  text-align: left; }
 
 .nontb_style-button-right {
-    text-align: right;
-}
+  text-align: right; }
 
 .nontb_style-arrow:after,
 .nontb_style-split:after {
-    background-repeat: no-repeat;
-    content: '';
-    // pseudo elements don't match wildcard selectors, so ".x-border-box *" will not apply
-    // to this element
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-}
+  background-repeat: no-repeat;
+  content: '';
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -webkit-box-sizing: border-box; }
 
 .nontb_style-arrow-right:after,
 .nontb_style-split-right:after {
-    display: table-cell;
-    background-position: right center;
-}
+  display: table-cell;
+  background-position: right center; }
 
 .nontb_style-arrow-bottom:after,
 .nontb_style-split-bottom:after {
-    display: table-row;
-    background-position: center bottom;
-    // when this pseudo el is display:table-row (with no table-cell inside) in needs
-    // content other than emtpy or space in order to render in some browsers (IE8-11
-    // and opera 12m currently), so use non-breaking space
-    content: '\00a0';
-    // line-height:0 is needed in opera 12 to prevent the pseudo el from inheriting
-    // line-height and being taller than specified by $icon-size.
-    line-height: 0;
-}
+  display: table-row;
+  background-position: center bottom;
+  content: '\00a0';
+  line-height: 0; }
 
 .nontb_style-mc {
-    // buttons and tabs can have a focus outline on the btnWrap element.  The default
-    // overflow:hidden styling of the frame body hides the outline, so override it to
-    // overflow:visible.
-    overflow: visible;
-}
+  overflow: visible; }
 
 .nontb_style-default-toolbar-small {
   -webkit-border-radius: 3px;
@@ -153,9 +120,8 @@
   background-image: -o-linear-gradient(top, #dbeeff, #d0e7ff 48%, #bbd2f0 52%, #bed6f5);
   background-image: -ms-linear-gradient(top, #dbeeff, #d0e7ff 48%, #bbd2f0 52%, #bed6f5);
   background-image: linear-gradient(top, #dbeeff, #d0e7ff 48%, #bbd2f0 52%, #bed6f5); }
-}
 
-./* line 237, ../../../ext-theme-base/sass/etc/mixins/frame.scss */
+/* line 237, ../../../ext-theme-base/sass/etc/mixins/frame.scss */
 .nontb_style-default-toolbar-small-mc {
   background-color: #f5f5f5; }
 
@@ -247,44 +213,54 @@
   color: #333333;
   padding: 0 4px;
   max-width: 100%; }
-  /* line 446, ../../../ext-theme-neutral/sass/src/button/Button.scss */
-  .nontb_style-icon-right > .nontb_style-inner-default-toolbar-small, .nontb_style-icon-left > .nontb_style-inner-default-toolbar-small {
-    max-width: calc(100% - 16px); }
+
+/* line 446, ../../../ext-theme-neutral/sass/src/button/Button.scss */
+.nontb_style-icon-right > .nontb_style-inner-default-toolbar-small, .nontb_style-icon-left > .nontb_style-inner-default-toolbar-small {
+  max-width: calc(100% - 16px); }
 
 /* line 453, ../../../ext-theme-neutral/sass/src/button/Button.scss */
 .nontb_style-icon-el-default-toolbar-small {
   height: 16px; }
-  /* line 457, ../../../ext-theme-neutral/sass/src/button/Button.scss */
-  .nontb_style-icon-left > .nontb_style-icon-el-default-toolbar-small, .nontb_style-icon-right > .nontb_style-icon-el-default-toolbar-small {
-    width: 16px; }
-  /* line 462, ../../../ext-theme-neutral/sass/src/button/Button.scss */
-  .nontb_style-icon-top > .nontb_style-icon-el-default-toolbar-small, .nontb_style-icon-bottom > .nontb_style-icon-el-default-toolbar-small {
-    min-width: 16px; }
-  /* line 466, ../../../ext-theme-neutral/sass/src/button/Button.scss */
-  .nontb_style-icon-el-default-toolbar-small.x-btn-glyph {
-    font-size: 16px;
-    line-height: 16px;
-    color: #333333;
-    opacity: 0.5; }
-    /* line 486, ../../../ext-theme-neutral/sass/src/button/Button.scss */
-    .x-ie8 .nontb_style-icon-el-default-toolbar-small.x-btn-glyph {
-      color: #999999; }
-  /* line 493, ../../../ext-theme-neutral/sass/src/button/Button.scss */
-  .nontb_style-text.nontb_style-icon-left > .nontb_style-icon-el-default-toolbar-small {
-    margin-right: 0px; }
-  /* line 504, ../../../ext-theme-neutral/sass/src/button/Button.scss */
-  .nontb_style-text.nontb_style-icon-right > .nontb_style-icon-el-default-toolbar-small {
-    margin-left: 0px; }
-  /* line 515, ../../../ext-theme-neutral/sass/src/button/Button.scss */
-  .nontb_style-text.nontb_style-icon-top > .nontb_style-icon-el-default-toolbar-small {
-    margin-bottom: 4px; }
-  /* line 519, ../../../ext-theme-neutral/sass/src/button/Button.scss */
-  .nontb_style-text.nontb_style-icon-bottom > .nontb_style-icon-el-default-toolbar-small {
-    margin-top: 4px; }
+
+/* line 457, ../../../ext-theme-neutral/sass/src/button/Button.scss */
+.nontb_style-icon-left > .nontb_style-icon-el-default-toolbar-small, .nontb_style-icon-right > .nontb_style-icon-el-default-toolbar-small {
+  width: 16px; }
+
+/* line 462, ../../../ext-theme-neutral/sass/src/button/Button.scss */
+.nontb_style-icon-top > .nontb_style-icon-el-default-toolbar-small, .nontb_style-icon-bottom > .nontb_style-icon-el-default-toolbar-small {
+  min-width: 16px; }
+
+/* line 466, ../../../ext-theme-neutral/sass/src/button/Button.scss */
+.nontb_style-icon-el-default-toolbar-small.x-btn-glyph {
+  font-size: 16px;
+  line-height: 16px;
+  color: #333333;
+  opacity: 0.5; }
+
+/* line 486, ../../../ext-theme-neutral/sass/src/button/Button.scss */
+.x-ie8 .nontb_style-icon-el-default-toolbar-small.x-btn-glyph {
+  color: #999999; }
+
+/* line 493, ../../../ext-theme-neutral/sass/src/button/Button.scss */
+.nontb_style-text.nontb_style-icon-left > .nontb_style-icon-el-default-toolbar-small {
+  margin-right: 0px; }
+
+/* line 504, ../../../ext-theme-neutral/sass/src/button/Button.scss */
+.nontb_style-text.nontb_style-icon-right > .nontb_style-icon-el-default-toolbar-small {
+  margin-left: 0px; }
+
+/* line 515, ../../../ext-theme-neutral/sass/src/button/Button.scss */
+.nontb_style-text.nontb_style-icon-top > .nontb_style-icon-el-default-toolbar-small {
+  margin-bottom: 4px; }
+
+/* line 519, ../../../ext-theme-neutral/sass/src/button/Button.scss */
+.nontb_style-text.nontb_style-icon-bottom > .nontb_style-icon-el-default-toolbar-small {
+  margin-top: 4px; }
 
 /* line 525, ../../../ext-theme-neutral/sass/src/button/Button.scss */
 .nontb_style-arrow-right > .nontb_style-icon.nontb_style-no-text.nontb_style-button-default-toolbar-small {
   padding-right: 4px; }
+
 /* line 528, ../../../ext-theme-neutral/sass/src/button/Button.scss */
 .nontb_style-arrow-right > .nontb_style-text.nontb_style-icon-right > .nontb_style-icon-el-default-toolbar-small {
   margin-right: 4px; }
@@ -299,6 +275,7 @@
   width: 8px;
   padding-right: 8px;
   background-image: url(../../js/lib/extjs/build/classic/theme-classic/resources/images/button/arrow.gif); }
+
 /* line 563, ../../../ext-theme-neutral/sass/src/button/Button.scss */
 .x-btn-wrap-default-toolbar-small.nontb_style-arrow-bottom:after {
   height: 8px;
@@ -309,6 +286,7 @@
   width: 14px;
   padding-right: 14px;
   background-image: url(../../js/lib/extjs/build/classic/theme-classic/resources/images/button/s-arrow-noline.gif); }
+
 /* line 597, ../../../ext-theme-neutral/sass/src/button/Button.scss */
 .x-btn-wrap-default-toolbar-small.nontb_style-split-bottom:after {
   height: 14px;
@@ -317,6 +295,7 @@
 /* line 606, ../../../ext-theme-neutral/sass/src/button/Button.scss */
 .x-btn-over > .x-btn-wrap-default-toolbar-small.nontb_style-split-right:after {
   background-image: url(../../js/lib/extjs/build/classic/theme-classic/resources/images/button/s-arrow-o.gif); }
+
 /* line 616, ../../../ext-theme-neutral/sass/src/button/Button.scss */
 .x-btn-over > .x-btn-wrap-default-toolbar-small.nontb_style-split-bottom:after {
   background-image: url(../../js/lib/extjs/build/classic/theme-classic/resources/images/button/s-arrow-bo.gif); }
@@ -324,6 +303,7 @@
 /* line 624, ../../../ext-theme-neutral/sass/src/button/Button.scss */
 .nontb_style-split-right > .nontb_style-icon.nontb_style-no-text.nontb_style-button-default-toolbar-small {
   padding-right: 4px; }
+
 /* line 627, ../../../ext-theme-neutral/sass/src/button/Button.scss */
 .nontb_style-split-right > .nontb_style-text.nontb_style-icon-right > .nontb_style-icon-el-default-toolbar-small {
   margin-right: 4px; }
@@ -331,12 +311,11 @@
 /* line 632, ../../../ext-theme-neutral/sass/src/button/Button.scss */
 .nontb_style-focus.nontb_style-default-toolbar-small {
   background-image: none;
-  background-color: transparent; 
-}
+  background-color: transparent; }
 
 /* line 644, ../../../ext-theme-neutral/sass/src/button/Button.scss */
 .nontb_style-focus.nontb_style-default-toolbar-small .nontb_style-wrap {
-    outline: 1px dotted #333333; }
+  outline: 1px dotted #333333; }
 
 /* line 667, ../../../ext-theme-neutral/sass/src/button/Button.scss */
 .x-btn-over.nontb_style-default-toolbar-small {
@@ -368,9 +347,10 @@
   border-color: #e1e1e1;
   background-image: none;
   background-color: purple; }
-  /* line 790, ../../../ext-theme-neutral/sass/src/button/Button.scss */
-  .nontb_style.nontb_style-disabled.nontb_style-default-toolbar-small .nontb_style-inner {
-    color: #8c8c8c; }
+
+/* line 790, ../../../ext-theme-neutral/sass/src/button/Button.scss */
+.nontb_style.nontb_style-disabled.nontb_style-default-toolbar-small .nontb_style-inner {
+  color: #8c8c8c; }
 
 /* line 957, ../../../ext-theme-neutral/sass/src/button/Button.scss */
 .x-nbr .nontb_style-default-toolbar-small {
@@ -384,62 +364,78 @@
 /* line 982, ../../../ext-theme-neutral/sass/src/button/Button.scss */
 .x-nbr .x-segmented-button-item-horizontal.nontb_style-default-toolbar-small.x-segmented-button-first {
   border-right-width: 1px !important; }
-  /* line 984, ../../../ext-theme-neutral/sass/src/button/Button.scss */
-  .x-nbr .x-segmented-button-item-horizontal.nontb_style-default-toolbar-small.x-segmented-button-first .nontb_style-default-toolbar-small-mc {
-    padding-right: 2px !important; }
+
+/* line 984, ../../../ext-theme-neutral/sass/src/button/Button.scss */
+.x-nbr .x-segmented-button-item-horizontal.nontb_style-default-toolbar-small.x-segmented-button-first .nontb_style-default-toolbar-small-mc {
+  padding-right: 2px !important; }
+
 /* line 988, ../../../ext-theme-neutral/sass/src/button/Button.scss */
 .x-nbr .x-segmented-button-item-horizontal.nontb_style-default-toolbar-small.x-segmented-button-middle {
   border-right-width: 1px !important; }
-  /* line 990, ../../../ext-theme-neutral/sass/src/button/Button.scss */
-  .x-nbr .x-segmented-button-item-horizontal.nontb_style-default-toolbar-small.x-segmented-button-middle .nontb_style-default-toolbar-small-mc {
-    padding-right: 2px !important;
-    padding-left: 2px !important; }
+
+/* line 990, ../../../ext-theme-neutral/sass/src/button/Button.scss */
+.x-nbr .x-segmented-button-item-horizontal.nontb_style-default-toolbar-small.x-segmented-button-middle .nontb_style-default-toolbar-small-mc {
+  padding-right: 2px !important;
+  padding-left: 2px !important; }
+
 /* line 996, ../../../ext-theme-neutral/sass/src/button/Button.scss */
 .x-nbr .x-segmented-button-item-horizontal.nontb_style-default-toolbar-small.x-segmented-button-last .nontb_style-default-toolbar-small-mc {
   padding-left: 2px !important; }
+
 /* line 1003, ../../../ext-theme-neutral/sass/src/button/Button.scss */
 .x-nbr .x-segmented-button-item-vertical.nontb_style-default-toolbar-small.x-segmented-button-first {
   border-bottom-width: 1px !important; }
-  /* line 1005, ../../../ext-theme-neutral/sass/src/button/Button.scss */
-  .x-nbr .x-segmented-button-item-vertical.nontb_style-default-toolbar-small.x-segmented-button-first .nontb_style-default-toolbar-small-mc {
-    padding-bottom: 2px !important; }
+
+/* line 1005, ../../../ext-theme-neutral/sass/src/button/Button.scss */
+.x-nbr .x-segmented-button-item-vertical.nontb_style-default-toolbar-small.x-segmented-button-first .nontb_style-default-toolbar-small-mc {
+  padding-bottom: 2px !important; }
+
 /* line 1009, ../../../ext-theme-neutral/sass/src/button/Button.scss */
 .x-nbr .x-segmented-button-item-vertical.nontb_style-default-toolbar-small.x-segmented-button-middle {
   border-bottom-width: 1px !important; }
-  /* line 1011, ../../../ext-theme-neutral/sass/src/button/Button.scss */
-  .x-nbr .x-segmented-button-item-vertical.nontb_style-default-toolbar-small.x-segmented-button-middle .nontb_style-default-toolbar-small-mc {
-    padding-top: 2px !important;
-    padding-bottom: 2px !important; }
+
+/* line 1011, ../../../ext-theme-neutral/sass/src/button/Button.scss */
+.x-nbr .x-segmented-button-item-vertical.nontb_style-default-toolbar-small.x-segmented-button-middle .nontb_style-default-toolbar-small-mc {
+  padding-top: 2px !important;
+  padding-bottom: 2px !important; }
+
 /* line 1017, ../../../ext-theme-neutral/sass/src/button/Button.scss */
 .x-nbr .x-segmented-button-item-vertical.nontb_style-default-toolbar-small.x-segmented-button-last .nontb_style-default-toolbar-small-mc {
   padding-top: 2px !important; }
+
 /* line 1023, ../../../ext-theme-neutral/sass/src/button/Button.scss */
 .x-nbr .x-segmented-button-item.nontb_style-default-toolbar-small:after {
   content: ' ';
   border-style: solid;
   border-width: 0;
   position: absolute; }
+
 /* line 1041, ../../../ext-theme-neutral/sass/src/button/Button.scss */
 .x-nbr .x-segmented-button-item-horizontal.nontb_style-default-toolbar-small:after {
   top: 1px;
   right: 0;
   bottom: 1px;
   left: 0; }
+
 /* line 1047, ../../../ext-theme-neutral/sass/src/button/Button.scss */
 .x-nbr .x-segmented-button-item-horizontal.nontb_style-default-toolbar-small.x-segmented-button-first:after {
   left: 1px; }
+
 /* line 1050, ../../../ext-theme-neutral/sass/src/button/Button.scss */
 .x-nbr .x-segmented-button-item-horizontal.nontb_style-default-toolbar-small.x-segmented-button-last:after {
   right: 1px; }
+
 /* line 1056, ../../../ext-theme-neutral/sass/src/button/Button.scss */
 .x-nbr .x-segmented-button-item-vertical.nontb_style-default-toolbar-small:after {
   top: 0;
   right: 1px;
   bottom: 0;
   left: 1px; }
+
 /* line 1062, ../../../ext-theme-neutral/sass/src/button/Button.scss */
 .x-nbr .x-segmented-button-item-vertical.nontb_style-default-toolbar-small.x-segmented-button-first:after {
   top: 1px; }
+
 /* line 1065, ../../../ext-theme-neutral/sass/src/button/Button.scss */
 .x-nbr .x-segmented-button-item-vertical.nontb_style-default-toolbar-small.x-segmented-button-last:after {
   bottom: 1px; }
@@ -448,12 +444,10 @@
 .x-box-scroller.x-box-scroller-menu {
   height: 7.5px;
   width: 52.5px;
-  background-size: 100%;
-}
-.x-box-scroller-menu.x-box-scroller-top {
-  background-position: 0 -7px;
-}
-.x-box-scroller-menu.x-box-scroller-bottom.x-box-scroller-hover {
-  background-position: 0 -7px;
-}
+  background-size: 100%; }
 
+.x-box-scroller-menu.x-box-scroller-top {
+  background-position: 0 -7px; }
+
+.x-box-scroller-menu.x-box-scroller-bottom.x-box-scroller-hover {
+  background-position: 0 -7px; }
