Integrated new registration endpoint to Ui. Styling changes to error dialog.

--- a/modules/login/src/main/resources/META-INF/resources/login/css/register.css
+++ b/modules/login/src/main/resources/META-INF/resources/login/css/register.css
@@ -30,8 +30,11 @@
 .errorborder {
   border-color: #a94442; }
 
-.errorhelp {
+.errorcolor {
   color: #a94442; }
+
+.errorResponse {
+  margin-top: 10px; }
 
 .confirmValue {
   color: steelblue; }
