--- a/webapp/src/main/webapp/styles/nics.css
+++ b/webapp/src/main/webapp/styles/nics.css
@@ -27,7 +27,7 @@
  * OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
-/** 
+/**
    NICS specific map style overrides */
 
 /** make zoom in/out buttons larger */
@@ -45,4 +45,8 @@
 	display: none !important;
 	align: left;
 
+}
+
+.error {
+    color: red;
 }
