ROC-Enhancements: Changes to 1. fix issues with Incident Name & Initial County Drop down. 2. clear out incident info fields when existing incident not selected from drop down

--- a/modules/report/src/main/resources/META-INF/resources/styles/report/report.css
+++ b/modules/report/src/main/resources/META-INF/resources/styles/report/report.css
@@ -32,6 +32,9 @@ div.roc-required label, div.fmag-required label{
     font-weight:bold;
 }
 
+div.roc-read-only input {
+    background: #f3f2f2;
+}
 
 .fmag-fieldset .x-fieldset-header-text{
     font-weight:bold;
