Fix issues with incidentId rendering on ROC, update incident type & fuel type checkboxes styling

--- a/modules/report/src/main/resources/META-INF/resources/styles/report/report.css
+++ b/modules/report/src/main/resources/META-INF/resources/styles/report/report.css
@@ -32,6 +32,11 @@ div.roc-required label, div.fmag-required label{
     font-weight:bold;
 }
 
+div.roc-no-style label {
+    color: black;
+    font-weight: normal;
+}
+
 div.roc-read-only input {
     background: #f3f2f2;
 }
