Styling of required fields updated
Styling of required fields updated.

--- a/modules/report/src/main/resources/META-INF/resources/styles/report/report.css
+++ b/modules/report/src/main/resources/META-INF/resources/styles/report/report.css
@@ -28,8 +28,12 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 div.roc-required label, div.fmag-required label{
-    color:#11aa00;
     font-weight:bold;
+}
+
+div.roc-required label span:after {
+    content: "*";
+    color: red;
 }
 
 div.roc-no-style label {
