GeoLocation issues and enhancements.
GeoLocation issues and enhancements.  Pending - putting pin on manual entry of latitude and longitude.

--- a/modules/report/src/main/resources/META-INF/resources/styles/report/report.css
+++ b/modules/report/src/main/resources/META-INF/resources/styles/report/report.css
@@ -45,6 +45,10 @@ div.roc-read-only input {
     background: #f3f2f2;
 }
 
+a.roc-button {
+    width: 45% !important;
+}
+
 .fmag-fieldset .x-fieldset-header-text{
     font-weight:bold;
 }
